Move javascript from index.html
Also introduce a click state function to reduce the likelyhood of
double clicks and make the control button behaviour the same
everywhere.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <script>
 	window.$ = window.jQuery = require('./jquery-2.2.4.min.js');
 	const ui = require('./ui/table-ui.js');
+	const controlUI = require('./ui/control-ui.js');
 	const dataStorage = require('./file_io/datastorage.js');
 	const settingsHandler = require('./settings/settings-handler.js');
 
@@ -39,54 +40,13 @@
 		ui.updateTitle();
 	});
 
-	$('#loadData').click(function(event) {
-		event.stopPropagation();
-		let dialog = require('electron').remote.dialog;
-		let fileNames = dialog.showOpenDialog({properties: ['openDirectory']});
-		if(fileNames && fileNames.length) {
-			loadDirectory(fileNames[0]);
-			settingsHandler.update({lastOpenDirectory : fileNames[0]}, 'user');
-		};
-	});
-
-	$('#saveData').click(function(event) {
-		event.stopPropagation();
-		if(dataStorage.isDirty()) {
-			dataStorage.save();
-			ui.renderData();
-		}
-	});
-
-	$('#reloadData').click(function(event) {
-		event.stopPropagation();
-		dataStorage.load();
-		$('button').prop("disabled", false);
-		ui.renderData();
-	});
-
-	$('#createNew').click(function(event) {
-		event.stopPropagation();
-		ui.addRow();
-	});
-
-	let searchTimerId;
-	$('input.search').keyup(function() {
-		clearTimeout(searchTimerId);
-		searchTimerId = window.setTimeout(ui.filterForSearch, 300);
-	});
-
 	settingsHandler.get().then(settings => {
 		if(settings.lastOpenDirectory) {
-			loadDirectory(settings.lastOpenDirectory);
+			controlUI.loadDirectory(settings.lastOpenDirectory);
 		}
 	});
 
-	function loadDirectory(directory) {
-		$('#renderArea').html('<div class="container"><p>Loading phrases from ' + directory + '</p></div>');
-		dataStorage.load(directory);
-		$('button').prop("disabled", false);
-		ui.renderData();
-	}
+	controlUI.initateControls();
 
 </script>
 </html>
